--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
     />
+
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+
+    <meta property="og:site_name" content="사랑방 주문서" />
+    <meta property="og:description" content="사랑방 케이크 주문을 편리하게." />
     <title>사랑방 주문서</title>
   </head>
   <body>
