feat: favicon 변경

--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html lang="en" data-theme="pastel">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" href="/logo.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
     />
-
     <meta property="og:image" content="/thumbnail.png" />
-
     <meta property="og:site_name" content="사랑방 주문서" />
     <meta property="og:description" content="사랑방 케이크 주문을 편리하게." />
     <title>사랑방 주문서</title>
